styles/styles.css
/* ... */
a.button:hover, a.button:focus, button:hover, button:focus  {
  background-color: var(--link-hover-color);
  cursor: pointer;
}

button:disabled, button:disabled:hover {
  background-color: var(--light-color);
  cursor: unset;
}

a.button.secondary, button.secondary {
  background-color: unset;
  border: 2px solid currentcolor;
  color: var(--text-color)
}

*/
main .section[data-layout] .layout-wrapper {
  display: flex;
  flex-direction: row;
  gap: 20px;
}
main .section[data-layout="50/50"] .layout-wrapper > div {
  flex: 1 50%;
}
main .section[data-layout="33/33/33"] .layout-wrapper > div {
  flex: 1 calc(33.33% - 5px);
}
main img {
  max-width: 100%;
  width: auto;
  height: auto;
}
.icon {
  display: inline-block;
  height: 24px;
  width: 24px;
}
.icon img {
  height: 100%;
  width: 100%;
}
/* sections */
main .section {
  padding: 64px 16px;
}
@media (width >=600px) {
  main .section {
    padding: 64px 32px;
  }
}
@media (width >=900px) {
  .section > div {
    max-width: 1200px;
    margin: auto;
  }
}
/* section metadata */
main .section.light, main .section.highlight {
  background-color: var(--light-color);
}
/* JMP Buttons */
a {
  background: transparent;
}
.button {
  display: inline-block;
  background-color: #f47723;
  color: white;
  text-decoration: none;
  font-size: 15px;
  font-size: 1.5rem;
  margin: 10px 0;
  cursor: pointer;
  line-height: 2;
  padding: 0 10px;
  position: relative;
  z-index: 1;
}
a.button:hover {
  /* npm run lint expects a modern color notation.  
  background: rgba(0, 0, 0, 40%);
  */
  background: #00006666;
}
/* Dark Button */
.dark-button-center {
  a.button {
    text-align: center;
    background: #00002200;
    border: 1px solid #ffffff;
    border-radius: 8px;
    min-width: 200px;
    margin: 0 auto;
    box-sizing: content-box;
    transition-duration: 0.2s;
    transition-timing-function: ease;
    position: relative;
    z-index: 1;
  }
  a.button:hover {
    color: #fcfcfc;
    background: #00006666;
    /* -- border: 1px solid black; -- */
    min-width: 200px;
  }
}
.sasfont {
  a:before {
    color: #eea879;
    font-family: 'sasicons-103018' !important;
    content: '';
  }
}
.sub-capability-cards {
  ul {
    background: rgba(0 0 0 / 0.025);
    column-count: 3;
    margin: 0 0 10px;
  }
  
  h4 {
    font-size: 16px;
    display: block;
    margin-block: 1.33em;
    font-weight: bold;
    unicode-bidi: isolate;
  }
}

sup {
  font-size: 50%;
}

/* text alignment */
.text-center {
  h1, h2, h3, h4, h5, p {
    text-align: center;
  }
}
.text-left {
  h1, h2, h3, h4, h5, p {
    text-align: left;
  }
}
.text-right {
  h1, h2, h3, h4, h5, p {
    text-align: right;
  }
}

/* Background Colors */
div.light-gray-background {
  background-color: #f4f4f4 !important;
}

div.dark-gray-background {
  background-color: #333333;
}

/* Text Colors */
div.light-text {
  color: #f4f4f4 !important;
}

div.dark-text {
  color: #333333 !important;
}
/* Linear Gradients */
div.blue-purple-gradient {
  background: linear-gradient(45deg, #0378CD 15%, #643695 95%);
}
div.blue-orange-gradient {
  background: linear-gradient(45deg, #0378CD 15%, #F47723 95%);
}
div.teal-lightgreen-gradient {
  background: linear-gradient(45deg, #007481 15%, #9CCB3B 95%);
}
div.purple-lightred-gradient {
  background: linear-gradient(45deg, #643695 15%, #F04B4B 95%);
}
div.lightred-purple-gradient {
  background: linear-gradient(45deg, #F04B4B 15%, #643695 95%);
}
div.purple-blue-gradient {
  background: linear-gradient(45deg, #643695 15%, #0378CD 95%);
}
div.purple-lightblue-gradient {
  background: linear-gradient(45deg, #643695 15%, #61CAE5 95%);
}
div.purple-lightpurple-gradient {
  background: linear-gradient(45deg, #643695 15%, #9D57A3 95%);
}
div.purple-teal-gradient {
  background: linear-gradient(45deg, #643695 15%, #007481 95%);
}
div.purple-lightteal-gradient {
  background: linear-gradient(45deg, #643695 15%, #3EBDAC 95%);
}
div.purple-orange-gradient {
  background: linear-gradient(45deg, #643695 15%, #F47723 95%);
}
div.darkgray-orange-gradient {
  background: linear-gradient(45deg, #172328 15%, #F47723 95%);
}

/* Section styles */
div.brand-neutral-dark {
  background: linear-gradient(45deg, #242d35 15%, #44545d 95%);
  color: #ffffff;
}
div.gray {
  background: #EFEFEF;
}
/* hero columns quote - touch file */
.hero-text-light {
  color: white;
}
.hero-text-dark {
  color: #333333;
}
/* hero section styling */
.place-background-image {
  .columns > div {
    margin: 2px;
    padding: 2px;
  }
  min-height: 175px;
  overflow: hidden;
  position: relative;
  .background-img {
    overflow: hidden;
    min-width: 100%;
    z-index: 1;
    top: 0;
    left: 0;
    position: absolute;
    img {
      min-width: 105%;
      opacity: .5;
    }
  }
  picture {
    position: relative;
    margin: 20px auto;
    display: block;
    z-index: 5;
  }
  h1, h2, h3, p {
    position: relative;
    z-index: 3;
  }
}
/* Dark Button */
.colunms :has(.button-container), .button-container {
  margin: 20px auto;
  text-align: center;
  .button-container {
    display: inline-block;
    min-width: 250px;
  }
}
a.button:any-link, button {
  font-family: var(--body-font-family);
  display: inline-block;
  box-sizing: border-box;
  text-decoration: none;
  border: 2px solid transparent;
  padding: 10px 20px;
  text-align: center;
  font-style: normal;
  font-weight: 600;
  font-size: 1.8rem;
  cursor: pointer;
  color: var(--background-color);
  background-color: var(--link-color);
  margin: 16px 0;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  border-radius: 5px;
}
/* ... */

